# Brow_Cast

./: .gitignore  README.md  main_cpp_export.md
Browser_Cast/: package-lock.json  package.json  stream-server.js
Browser_Cast/public/: index.html  script.js  style.css
Documentation/: 01 Installations.md  02 Initialize process.md  03 create steam program.md  proposal.md
Documentation/00 Instalaltion/: 01 CPP installation.md
Documentation/Phase 1 Project Boot/: 00 Pre-Requisites.md  01 Project Folder Structure.md  02 Set up the C++ Agent Project (CMake).md  03 Set up the Node.js Server Project (Express + ws).md  04 Setup base of frontend.md
Documentation/Phase 2 Agent – Window & Screen Capture (C++)/: 01 Add WebSocket Client Library (websocketpp).md  02 Add Image Compression Library (libjpeg-turbo).md  03 Incomplete.md
Remote-Share/Agent/: CMakeLists.txt  main.cpp
Remote-Share/Agent/src/: CaptureManager.cpp  CaptureManager.hpp  ImageProcessor.cpp  ImageProcessor.h  ImageProcessor.hpp  InputInjector.cpp  InputInjector.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketClient.hpp  WindowEnumerator.cpp  WindowEnumerator.h  main.cpp
Remote-Share/Server/: index.js  package-lock.json  package.json
Remote-Share/Web/: index.html  script.js  style.css
Summary/: Commands.md  Error.md  README.md  cS.js  directorySummary.js  zzz.md
Summary/Chat/: client.py  server.py
Summary/Codebase/ScriptOutput/CodeSummary/: CodeSummary.md
